fix some functionality bugs, pretty it up

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
   <form method="GET" action="" class="decode-form">
-    <textarea class="encoded" name="encoded"></textarea>
+    <textarea class="encoded" name="encoded" placeholder="(ex. http://www.example.com/?a=an%20example&amp;b=2)"></textarea>
 
-    <input type="submit" value="Decode" class="submit-button">
+    <input type="submit" value="Decode" class="submit-button btn">
   </form>
 
   <div class="output">
