--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <title>Useful Url decoder</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="http://fonts.googleapis.com/css?family=Istok+Web" rel="stylesheet" type="text/css">
   <link href="build/urldecoder.css" type="text/css" rel="stylesheet">
 </head>
