async that script

--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
     <dl class="decoded-params"></dl>
   </div>
 
-  <script type="text/javascript" src="build/urldecoder.js"></script>
+  <script type="text/javascript" src="build/urldecoder.js" async></script>
 </body>
 </html>
