upgrade things, merge with wawjr3d

--- a/index.html
+++ b/index.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8" />
-  <title>Useful Url decoder</title>
+  <title>url decoder | wawjr3d</title>
+
+  <!--#include virtual="/includes/head.html" -->
+
+  <meta name="description" content="A practical url decoder by Wayne Warner" />
+
+  <meta name="twitter:description" content="A practical url decoder by Wayne Warner">
+  <meta name="twitter:title" content="url decoder | wawjr3d">
+  <meta name="twitter:url" content="https://www.wawjr3d.com/urldecoder">
+
+  <meta property="og:description" content="A practical url decoder by Wayne Warner">
+  <meta property="og:title" content="url decoder | wawjr3d">
+  <meta property="og:url" content="https://www.wawjr3d.com/urldecoder">
+
+  <link rel="canonical" href="https://www.wawjr3d.com/urldecoder">
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="http://fonts.googleapis.com/css?family=Istok+Web" rel="stylesheet" type="text/css">
+  <link href="//fonts.googleapis.com/css?family=Istok+Web" rel="stylesheet" type="text/css">
   <link href="build/urldecoder.css" type="text/css" rel="stylesheet">
 </head>
 <body>
@@ -18,6 +32,8 @@
     <div class="decoded"></div>
     <dl class="decoded-params"></dl>
   </div>
+
+  <!--#include virtual="/includes/footer.html" -->
 
   <script type="text/javascript" src="build/urldecoder.js" async></script>
 </body>
