--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 
   <!--#include virtual="/includes/footer.html" -->
 
+  <!--#include virtual="/includes/scripts.html" -->
   <script type="text/javascript" src="build/urldecoder.js" async></script>
 </body>
 </html>
