use postcss, sourcemaps, header, input fixes

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <link href="build/urldecoder.css" type="text/css" rel="stylesheet">
 </head>
 <body>
+  <h1>url decoder</h1>
   <form method="GET" action="" class="decode-form">
     <textarea class="encoded" name="encoded" placeholder="(ex. http://www.example.com/?a=an%20example&amp;b=2)"></textarea>
 
