--- a/index.html
+++ b/index.html
@@ -22,19 +22,21 @@
   <link href="build/urldecoder.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-  <h1>url decoder</h1>
-  <form method="GET" action="" class="decode-form">
-    <textarea class="encoded" name="encoded" placeholder="(ex. http://www.example.com/?a=an%20example&amp;b=2)"></textarea>
+  <div id="container">
+    <h1>url decoder</h1>
+    <form method="GET" action="" class="decode-form">
+      <textarea class="encoded" name="encoded" placeholder="(ex. http://www.example.com/?a=an%20example&amp;b=2)"></textarea>
 
-    <input type="submit" value="Decode" class="submit-button btn">
-  </form>
+      <input type="submit" value="Decode" class="submit-button btn">
+    </form>
 
-  <div class="output">
-    <div class="decoded"></div>
-    <dl class="decoded-params"></dl>
+    <div class="output">
+      <div class="decoded"></div>
+      <dl class="decoded-params"></dl>
+    </div>
+
+    <!--#include virtual="/includes/footer.html" -->
   </div>
-
-  <!--#include virtual="/includes/footer.html" -->
 
   <!--#include virtual="/includes/scripts.html" -->
   <script type="text/javascript" src="build/urldecoder.js" async></script>
